Build KinectCapture as a library, link Recorder to it

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -4,13 +4,18 @@ project(KinectRecorder CXX)
 
 set(sources
 
+	main.cpp
+	mainform.cpp
+	mainwindow.cpp
+)
+
+set(library_sources
+
 	filecapture.cpp
 	icapture.cpp
 	kinectcapture.cpp
 	luxframe.cpp
-	main.cpp
-	mainform.cpp
-	mainwindow.cpp
+
 )
 
 set(ui_files mainwindow.ui)
@@ -21,23 +26,23 @@ include(${QT_USE_FILE})
 find_package(OpenCV REQUIRED)
 
 include_directories(${CMAKE_CURRENT_SOURCE_DIR})
-#include_directories(${CMAKE_CURRENT_SOURCE_DIR}/include/)
-#include_directories(${CMAKE_CURRENT_SOURCE_DIR}/algorithms/)
 
-file(GLOB headers ${CMAKE_CURRENT_SOURCE_DIR}/*.hpp)
+set(headers mainform.hpp mainwindow.hpp)
 qt4_wrap_cpp(headers_moc ${headers})
 qt4_wrap_ui(headers_ui ${ui_files})
 
 set(CMAKE_INCLUDE_CURRENT_DIR ON)
 set(CMAKE_CXX_FLAGS "-std=c++11")
 
-#add_subdirectory(algorithms)
+add_library(kinectCapture SHARED ${library_sources})
 
 add_executable(kinectRecorder ${sources} ${headers_moc} ${headers_ui})
 
 target_link_libraries(
-	kinectRecorder
+	kinectCapture
 
 	${QT_LIBRARIES}
 	${OpenCV_LIBS}
 )
+
+target_link_libraries(kinectRecorder kinectCapture)
