Use CURRENT_SOURCE_DIR instead of SOURCE_DIR for try_compile

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -59,7 +59,7 @@ if("${CMAKE_CXX_COMPILER_ID}" STREQUAL "GNU" OR "${CMAKE_CXX_COMPILER_ID}" STREQ
 endif()
 
 try_compile(OPENCV_HAS_OPENNI ${CMAKE_BINARY_DIR}
-            ${CMAKE_SOURCE_DIR}/compile-tests/test-openni.cpp
+            ${CMAKE_CURRENT_SOURCE_DIR}/compile-tests/test-openni.cpp
 )
 
 if(${OPENCV_HAS_OPENNI})
